[project]
name = "discovering-backdoors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "huggingface>=0.0.1",
    "huggingface-hub[cli]>=0.36.0",
    "peft>=0.17.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
